--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,24 @@ std = ["aead/std", "alloc"]
 alloc = ["aead/alloc"]
 heapless = ["aead/heapless"]
 
+# Compile for speed
+[profile.release]
+codegen-units = 1
+opt-level = 3
+lto = true
+debug = false
+debug-assertions = false
+panic = "abort"
+
+# Compile for library size
+#[profile.release]
+#codegen-units = 1
+#opt-level = "z"
+#lto = true
+#debug = false
+#debug-assertions = false
+#panic = "abort"
+
 [package.metadata.docs.rs]
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
