--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ criterion = "0.3.5"
 criterion-cycles-per-byte = "0.1.2"
 rand = "0.8.5"
 camellia = { git = "https://github.com/RustCrypto/block-ciphers" }
+gift_cipher = { git = "https://github.com/Schmid7k/block-ciphers" }
 
 [features]
 default = ["aes", "alloc"]
